--- a/mineru-service/compose.yaml
+++ b/mineru-service/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # vLLM inference server
   vllm-server:
@@ -11,13 +9,9 @@ services:
     volumes:
       - ${MINERU_DATA_DIR:-./data}:/data
       - ${HOME}/.cache/huggingface:/root/.cache/huggingface
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+    # NixOS compatible GPU configuration
+    devices:
+      - nvidia.com/gpu=all
     shm_size: 32gb
     ipc: host
     command: >
@@ -41,13 +35,9 @@ services:
     volumes:
       - ${MINERU_DATA_DIR:-./data}:/data
       - ${HOME}/.cache/huggingface:/root/.cache/huggingface
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+    # NixOS compatible GPU configuration
+    devices:
+      - nvidia.com/gpu=all
     shm_size: 32gb
     ipc: host
     command: >
@@ -66,13 +56,9 @@ services:
     volumes:
       - ${MINERU_DATA_DIR:-./data}:/data
       - ${HOME}/.cache/huggingface:/root/.cache/huggingface
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+    # NixOS compatible GPU configuration
+    devices:
+      - nvidia.com/gpu=all
     shm_size: 32gb
     ipc: host
     environment:
