--- a/mineru-service/compose.yaml
+++ b/mineru-service/compose.yaml
@@ -16,7 +16,7 @@ services:
     ipc: host
     command: >
       bash -c "
-      python -m vllm.entrypoints.openai.api_server 
+      python3 -m vllm.entrypoints.openai.api_server 
       --model Qwen/Qwen2-VL-2B-Instruct 
       --port 30000 
       --host 0.0.0.0 
